scrollbar fix on main page

--- a/css/index.css
+++ b/css/index.css
@@ -1790,3 +1790,9 @@ footer {
     }
 
 }
+
+/* Custom Scrollbar */
+::-webkit-scrollbar { width: 10px; }
+::-webkit-scrollbar-track { background: var(--darker); }
+::-webkit-scrollbar-thumb { background: var(--gradient-1); border-radius: 10px; }
+::-webkit-scrollbar-thumb:hover { background: var(--primary); }
