--- a/css/projects.css
+++ b/css/projects.css
@@ -807,10 +807,10 @@ footer {
         grid-template-columns: 1fr;
     }
 
-        @media (hover: none) and (pointer: coarse) {
-        .cursor {
-            display: none !important;
-        }
+    @media (hover: none) and (pointer: coarse) {
+    .cursor {
+        display: none !important;
+    }
     }
 }
 
@@ -970,6 +970,11 @@ footer {
     }
     .footer-heart {
         font-size: 1.2rem;
+    }
+    @media (hover: none) and (pointer: coarse) {
+        .cursor {
+            display: none !important;
+        }
     }
 }
 
